--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,15 +44,8 @@ jobs:
       - name: Cradio/Sweep Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
 
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 cradio_left_nice_nano_v2.uf2
-
-      - name: Archive (Cradio/Sweep Left)
-        uses: actions/upload-artifact@v4
-        with:
-          name: firmware-zmk-sweep
-          path: cradio_left_nice_nano_v2.uf2
-          overwrite: true
+      - name: Rename zmk.uf2 (Left)
+        run: mv build/zephyr/zmk.uf2 cradio_left_nice_nano_v2.uf2
 
       - name: West Build (Cradio/Sweep Right)
         run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=cradio_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
@@ -60,11 +53,14 @@ jobs:
       - name: Cradio/Sweep Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
 
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 cradio_right_nice_nano_v2.uf2
+      - name: Rename zmk.uf2 (Right)
+        run: mv build/zephyr/zmk.uf2 cradio_right_nice_nano_v2.uf2
 
-      - name: Archive (Cradio/Sweep Right)
+      - name: Create ZIP Archive
+        run: zip firmware-zmk-sweep.zip cradio_left_nice_nano_v2.uf2 cradio_right_nice_nano_v2.uf2
+
+      - name: Upload ZIP Archive
         uses: actions/upload-artifact@v4
         with:
           name: firmware-zmk-sweep
-          path: cradio_right_nice_nano_v2.uf2
+          path: firmware-zmk-sweep.zip
