add code in the build.yml to install zip utility

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
+      - name: Install zip utility
+        run: apt-get update && apt-get install -y zip
+
       - name: West Init
         run: west init -l config
 
